syntax = "proto3";

package webitel.chat.service.chatapi; 

service ChatApiService {
  rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse) {}
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse) {}
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {}
  rpc GetProfiles(GetProfilesRequest) returns (GetProfilesResponse) {}
  rpc GetProfileByID(GetProfileByIDRequest) returns (GetProfileByIDResponse) {}
}

message Error {
    string id = 1;
    string message = 2;
}

message Profile {
  int64 id = 1;
  string name = 2;
  string type = 3;
  int64 domain_id = 4;
  int64 schema_id = 5;
  map<string, string>  variables = 6;
}

message CreateProfileRequest {
  Profile item = 1;
}

message CreateProfileResponse {
  Profile item = 1;
  Error error = 2;
}

message DeleteProfileRequest {
  int64 profile_id = 1;
}

message DeleteProfileResponse {
  Error error = 1;
}

message UpdateProfileRequest {
  Profile item = 1;
}

message UpdateProfileResponse {
  Profile item = 1;
  Error error = 2;
}

message GetProfileByIDRequest {}

message GetProfileByIDResponse {}

message GetProfilesRequest {}

message GetProfilesResponse {}